추천페이지 수정

--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -43,7 +43,7 @@
     border: none; cursor: pointer;">다시</a> -->
 
     <!-- 확인 버튼 -->
-    <a href="{% url 'records_create' %}?food_id={{ food.id }}&food_menu={{ food.foodname }}&food_name={{ food.foodtype }}" class="btn" style="background-color: gray; color: white; padding: 10px 20px;
+    <a href="{% url 'records_create' %}?food_id={{ food.id }}&food_menu={{ food_name }}&food_name={{ food_type }}" class="btn" style="background-color: gray; color: white; padding: 10px 20px;
         border: none; cursor: pointer;">확인</a>
 
 
