--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-<div id="nav">{% include "test/navbar2.html" %}</div>
+<div id="nav">{% include "navbar.html" %}</div>
 
 <!-- 기본 템플릿 안에 삽입될 내용 Start-->
 {% block content %}
