--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,5 @@
 
-{% extends 'test/base22.html' %}
+{% extends 'base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -17,6 +17,6 @@
 {% block content %}
 
 <!-- 본문 -->
-<div id="container">{% include 'test/container2.html' %}</div>
+<div id="container">{% include 'main/container.html' %}</div>
 
 {% endblock %}
