--- a/templates/main/container.html
+++ b/templates/main/container.html
@@ -5,7 +5,7 @@
     <div class="row h-100">
       <div class="col-12">
         <div class="text-center m-0 vh-100 d-flex flex-column justify-content-center text-light">
-          <h1 class="display-4"><b>Choose Your Menu!</b></h1>
+          <h1 class="display-4"><b>Choose Your Meal!</b></h1>
           <p class="lead">오늘은 이거 어때? </p>
 
           <div class="mt-2 mx-auto">
