--- a/templates/reco/reco_header.html
+++ b/templates/reco/reco_header.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <div style="text-align:center; height:100px;">
-    <h1>메뉴를 추천해 드려요~</h1>
+    <h2>Choose Your Meal!</h2>
+    <p>
+    <h4>오늘은 이거 어때?</h4>
 </div>
 </body>
 </html>
