--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,10 @@
     <!-- pybo CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+    </style>
+
      <style>
       header {
           background-image: url('https://ifh.cc/g/4D9ZQX.jpg');
