--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
     </style>
 
      <style>
