--- a/templates/main/container.html
+++ b/templates/main/container.html
@@ -5,8 +5,8 @@
     <div class="row h-100">
       <div class="col-12">
         <div class="text-center m-0 vh-100 d-flex flex-column justify-content-center text-light">
-          <span class="lobster-main"><b>Choose Your Meal!</b></span>
-          <p class="lead">오늘은 이거 어때? </p>
+          <span class="lobster-main">Choose Your Meal!</span>
+          <p class="gowundodum-main">오늘은 이거 어때? </p>
 
           <div class="mt-2 mx-auto">
             <div class="btn-group">
