--- a/templates/reco/reco_header.html
+++ b/templates/reco/reco_header.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>recommend_header</title>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+    </style>
+
+
+
 </head>
 <body>
 <div style="text-align:center; height:100px;">
-    <h2>Choose Your Meal!</h2>
-    <p>
-    <h4>오늘은 이거 어때?</h4>
+    <span class="lobster-title">Choose Your Meal!</span>
+    <br>
+    <span class="gowundodum-title">오늘은 이거 어때?</span>
 </div>
 </body>
 </html>
