--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,6 +17,11 @@
           <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
           {% endif %}
         </li>
+        <li class="nav-item">
+          {% if user.is_authenticated %}
+          <a href="{% url 'common:profile_view' user_id=request.user.pk %}">회원정보</a>
+          {% endif %}
+        </li>
       </ul>
 
       <ul class="navbar-nav">
