--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -8,7 +8,7 @@
                         <div id="map" style="width:500px;height:400px; margin:auto;"></div>
                         <h4> {{ food_type }} </h4>
                         <h4> {{ food_price }} </h4>
-                        <h1 class="card-title">{{ food_name }}</h1>
+                        <span class="gowundodum-title"><b>{{ food_name }}</b></span>
                     </div>
                 </div>
     </div>
