--- a/templates/reco/reco_header.html
+++ b/templates/reco/reco_header.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-<div style="text-align:center; height:100px;">
+<div style="text-align:center; height:100px; margin-bottom:20px;">
     <span class="lobster-title">Choose Your Meal!</span>
     <br>
     <span class="gowundodum-title">오늘은 이거 어때?</span>
