--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -1,4 +1,4 @@
-{% extends 'base2.html' %}
+
 {% block content %}
 
 <!-- 추천 결과 출력 -->
@@ -8,7 +8,7 @@
                         <div id="map" style="width:500px;height:400px; margin:auto; margin-top:10px; margin-bottom:20px"></div>
                         <h4> {{ food_type }} </h4>
                         <h4> {{ food_price }} </h4>
-                        <span class="gowundodum-title"><b>{{ food_name }}</b></span>
+                        <h1><b>{{ food_name }}</b></h1>
                     </div>
                 </div>
 </div>
