--- a/templates/reco/reco_header.html
+++ b/templates/reco/reco_header.html
@@ -6,6 +6,8 @@
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
+
     </style>
 
 
