--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,12 +33,12 @@
             Recommends
           </a>
           <div class="dropdown-menu" aria-labelledby="recommendsDd">
-            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend/">전   체</a>
-            <a class="dropdown-item px-2 " href="#">한   식</a>
-            <a class="dropdown-item px-2 " href="#">중   식</a>
-            <a class="dropdown-item px-2 " href="#">일   식</a>
-            <a class="dropdown-item px-2 " href="#">양   식</a>
-            <a class="dropdown-item px-2 " href="#">디 저 트</a>
+            <a class="dropdown-item px-2 " href="recommend-food/?food_type= ">전   체</a>
+            <a class="dropdown-item px-2 " href="recommend-food/?food_type=한식">한   식</a>
+            <a class="dropdown-item px-2 " href="recommend-food/?food_type=중식">중   식</a>
+            <a class="dropdown-item px-2 " href="recommend-food/?food_type=일식">일   식</a>
+            <a class="dropdown-item px-2 " href="recommend-food/?food_type=양식">양   식</a>
+            <a class="dropdown-item px-2 " href="recommend-food/?food_type=디저트">디 저 트</a>
           </div>
         </li>
 
