--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -20,12 +20,12 @@
             <div class="form-group" style="margin-right: 10px;">
                 <label for="foodTypeSelect">Select Food Type:</label>
                 <select id="foodTypeSelect" name="food_type" class="form-control so">
-                    <option value="" selected>All</option>
-                    <option value="디저트">디저트</option>
-                    <option value="중식">중식</option>
-                    <option value="양식">양식</option>
-                    <option value="한식">한식</option>
-                    <option value="일식">일식</option>
+                    <option value="" {% if food_type == "" %}selected{% endif %}>All</option>
+                    <option value="디저트" {% if food_type == "디저트" %}selected{% endif %}>디저트</option>
+                    <option value="중식" {% if food_type == "중식" %}selected{% endif %}>중식</option>
+                    <option value="양식" {% if food_type == "양식" %}selected{% endif %}>양식</option>
+                    <option value="한식" {% if food_type == "한식" %}selected{% endif %}>한식</option>
+                    <option value="일식" {% if food_type == "일식" %}selected{% endif %}>일식</option>
                       <!-- 추가적인 분류 옵션들 -->
                 </select>
             </div>
@@ -33,7 +33,7 @@
             <!-- 주소 입력 폼 -->
             <div class="form-group" style="margin-right: 10px;">
                 <label for="addressInput">주소를 입력해주세요.</label>
-                <input type="text" id="addressInput" name="address" class="form-control">
+                <input type="text" id="addressInput" name="address" class="form-control" value="{{ address }}">
             </div>
 
             <!-- 리셋 버튼
@@ -77,6 +77,12 @@ var mapContainer = document.getElementById('map'), // 지도를 표시할 div
 // 지도를 생성합니다
 var map = new kakao.maps.Map(mapContainer, mapOption);
 
+// 지도에 확대 축소 컨트롤을 생성한다
+var zoomControl = new kakao.maps.ZoomControl();
+
+// 지도의 우측에 확대 축소 컨트롤을 추가한다
+map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+
 // 장소 검색 객체를 생성합니다
 var ps = new kakao.maps.services.Places();
 
@@ -114,7 +120,10 @@ function displayMarker(place) {
     // 마커에 클릭이벤트를 등록합니다.
     kakao.maps.event.addListener(marker, 'click', function() {
         // 마커를 클릭하면 장소명이 인포윈도우에 표출됩니다
-        infowindow.setContent('<div style="padding:5px;font-size:12px;">' + place.place_name + '</div>');
+        infowindow.setContent('<div style="padding:5px;font-size:12px; text-align: center;">' +
+                            '<div style="text-align: center;">' + place.place_name + '</div>' +
+                          '<a href="' + place.place_url + '" target="_blank" style="font-size:10px";>자세히 보기</a>'
+                          + '</div>');
         infowindow.open(map, marker);
     });
 }
