--- a/templates/pybo/records_detail.html
+++ b/templates/pybo/records_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container my-3">
+<div class="container my-3 nanum-context">
     <h2 class="border-bottom py-2">{{ records.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
