--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap');
     </style>
 
      <style>
