--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 <!--<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="navbar1">-->
   <div class="container">
-    <a class="navbar-brand mr-1 mb-1 mt-0" href="http://localhost:8000/">PyFood</a>
+    <a class="navbar-brand mr-1 mb-1 mt-0  tilt-nav" href="http://localhost:8000/">PyFood</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,16 +10,16 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           {% if user.is_authenticated %}
-          <a class="nav-link" href="{% url 'common:logout' %}">
-            {{ user.username }} (로그아웃)
+          <a class="nav-link tilt-nav" href="{% url 'common:logout' %}">
+            {{ user.username }} (logout)
           </a>
           {% else %}
-          <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
+          <a class="nav-link tilt-nav" href="{% url 'common:login' %}">login</a>
           {% endif %}
         </li>
-        <li class="nav-item">
+        <li class="nav-item tilt-nav">
           {% if user.is_authenticated %}
-          <a class="nav-link" href="{% url 'common:profile_view' user_id=request.user.pk %}">회원정보</a>
+          <a class="nav-link" href="{% url 'common:profile_view' user_id=request.user.pk %}">info</a>
           {% endif %}
         </li>
       </ul>
@@ -29,36 +29,36 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="recommendsDd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle tilt-nav" href="#" id="recommendsDd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Recommends
           </a>
           <div class="dropdown-menu" aria-labelledby="recommendsDd">
-            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend-food/?food_type= ">전   체</a>
-            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend-food/?food_type=한식">한   식</a>
-            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend-food/?food_type=중식">중   식</a>
-            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend-food/?food_type=일식">일   식</a>
-            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend-food/?food_type=양식">양   식</a>
-            <a class="dropdown-item px-2 " href="http://localhost:8000/recommend-food/?food_type=디저트">디 저 트</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type= ">전&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;체</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=한식">한&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=중식">중&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=일식">일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=양식">양&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=디저트">디 저 트</a>
           </div>
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="recordsDd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle tilt-nav" href="#" id="recordsDd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Records
           </a>
           <div class="dropdown-menu" aria-labelledby="recordsDd">
-            <a class="dropdown-item px-2" href="{% url 'records_create' %}">기 록 하 기</a>
-            <a class="dropdown-item px-2" href="/pybo/records/">조 회 하 기</a>
+            <a class="dropdown-item px-2 noto-sans" href="{% url 'records_create' %}">기 록 하 기</a>
+            <a class="dropdown-item px-2 noto-sans" href="/pybo/records/">조 회 하 기</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">1</a>
+          <a class="nav-link tilt-nav" href="#">1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">2</a>
+          <a class="nav-link tilt-nav" href="#">2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">3</a>
+          <a class="nav-link tilt-nav" href="#">3</a>
         </li>
 
       </ul>
