--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item tilt-nav">
           {% if user.is_authenticated %}
-          <a class="nav-link" href="{% url 'common:profile_view' user_id=request.user.pk %}">info</a>
+          <a class="nav-link" href="{% url 'common:profile_view' user_id=request.user.pk %}">profile info</a>
           {% endif %}
         </li>
       </ul>
