--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,7 @@
             Recommends
           </a>
           <div class="dropdown-menu" aria-labelledby="recommendsDd">
-            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type= ">전&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;체</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type= ">A&nbsp;&nbsp;&nbsp;l&nbsp;&nbsp;&nbsp;l</a>
             <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=한식">한&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
             <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=중식">중&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
             <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=일식">일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
