--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -23,10 +23,10 @@
             <input type="password" class="form-control" name="password" id="password"
                    value="">
         </div>
-        <button type="submit" class="btn btn-primary">로그인</button>
+        <button type="submit" class="btn btn-danger">로그인</button>
         <div class="col-8 text-right">
             <span>
-                <a href="{% url 'common:signup' %}">회원가입</a>
+                <a href="{% url 'common:signup' %}" class="text-danger">회원가입</a>
             </span>
         </div>
 
