--- a/templates/main/container.html
+++ b/templates/main/container.html
@@ -1,12 +1,21 @@
 {% load static %}
 
-<header class="bg-primary">
+<header class="bg-primary" xmlns="http://www.w3.org/1999/html">
   <div class="container h-100">
     <div class="row h-100">
       <div class="col-12">
         <div class="text-center m-0 vh-100 d-flex flex-column justify-content-center text-light">
-          <span class="lobster-main">Choose Your Meal!</span>
-          <p class="gowundodum-main">오늘은 이거 어때? </p>
+          <div>
+            <span class="lobster-main" style="color:firebrick;">C</span>
+            <span class="lobster-main">hoose Your</span>
+            <span class="lobster-main" style="color:gold;">M</span>
+            <span class="lobster-main">eal!</span>
+          </div>
+          <div>
+            <span class="gowundodum-main" >오늘은 </span>
+            <span class="gowundodum-main" style="color:orange;">이거 </span>
+            <span class="gowundodum-main">어때?</span>
+          </div>
 
           <div class="mt-2 mx-auto">
             <div class="btn-group">
