--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -4,7 +4,7 @@
 <div class="container my-3 nanum-context">
     <div class="row">
         <div class="col-4">
-            <b><h1>로그인(Log-In)</b></h1>
+            <h1><b>로그인(Log-In)</b></h1>
         </div>
 
     </div>
@@ -24,11 +24,8 @@
                    value="">
         </div>
         <button type="submit" class="btn btn-danger">로그인</button>
-        <div class="col-8 text-right">
-            <span>
-                <a href="{% url 'common:signup' %}" class="text-danger">회원가입</a>
-            </span>
-        </div>
+        <button type="button" class="btn btn-danger"><a href="{% url 'common:signup' %}" style="color:white;">회원가입</a></button>
+
 
     </form>
 </div>
