글자색 변경

--- a/templates/reco/reco_header.html
+++ b/templates/reco/reco_header.html
@@ -15,9 +15,14 @@
 </head>
 <body>
 <div style="text-align:center; height:100px; margin-bottom:20px;">
-    <span class="lobster-title">Choose Your Meal!</span>
+    <span class="lobster-title" style="color:firebrick;">C</span>
+    <span class="lobster-title">hoose Your</span>
+    <span class="lobster-title" style="color:gold;">M</span>
+    <span class="lobster-title">eal!</span>
     <br>
-    <span class="gowundodum-title">오늘은 이거 어때?</span>
+    <span class="gowundodum-title" >오늘은 </span>
+    <span class="gowundodum-title" style="color:orange;">이거 </span>
+    <span class="gowundodum-title">어때?</span>
 </div>
 </body>
 </html>
