--- a/templates/common/profile_view.html
+++ b/templates/common/profile_view.html
@@ -25,6 +25,7 @@
             <p>주소 : {{ user.address|default_if_none:'' }}</p>
         </div>
     <a href="{% url 'common:profile_update' user_id=request.user.pk %}" class="btn btn-secondary">수정하기</a>
+    <a href="{% url 'common:change_password'%}" class="btn btn-secondary">비밀번호 변경</a>
 </div>
 
 {% endblock %}
