--- a/templates/pybo/records_detail.html
+++ b/templates/pybo/records_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container my-3 nanum-context">
-    <h2 class="border-bottom py-2">{{ records.subject }}</h2>
+    <h2 class="border-bottom py-2"><b>{{ records.subject }}</b></h2>
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">
@@ -23,26 +23,16 @@
                             별점이 등록되지 않았습니다.
                         {% endif %}
                     </p>
-                    {{ records.modify_date|default:records.create_date }}
+                    {{ records.modify_date|default:records.create_date|date:"Y-m-d H:i" }}
                 </div>
             </div>
         </div>
     </div>
     <div class="text-center">
-        <h4>별점 등록하기</h4>
+
         <form method="post" action="{% url 'submit_rating' records_id=records.id %}">
             {% csrf_token %}
-            <div class="star-rating">
-                {% for i in "12345" %}
-                    <input type="radio" name="rating" id="input-star{{ i }}" value="{{ i }}"
-                           {% if records.rating %} disabled {% endif %}>
-                    <label for="input-star{{ i }}"></label>
-                {% endfor %}
-            </div>
-            <div>
-            <button type="submit" class="btn btn-danger mx-1"
-                    {% if records.rating %} disabled {% endif %}>별점 등록</button>
-            </div>
+
             {% if request.user == records.author %}
             <div class="my-3">
                 <a href="{% url 'records_modify' records.id %}"
