--- a/templates/pybo/records_detail.html
+++ b/templates/pybo/records_detail.html
@@ -36,8 +36,8 @@
             {% if request.user == records.author %}
             <div class="my-3">
                 <a href="{% url 'records_modify' records.id %}"
-                   class="btn btn-sm btn-outline-secondary">수정</a>
-                <a href="#" class="delete btn btn-sm btn-outline-secondary"
+                   class="btn btn-sm btn-outline-success">수정</a>
+                <a href="#" class="delete btn btn-sm btn-outline-success"
                    data-url="{% url 'records_delete' records.id %}">삭제</a>
             </div>
             {% endif %}
