--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -41,11 +41,11 @@
             border: none; cursor: pointer;">다시</a> -->
 
             <!-- 검색 버튼 -->
-            <button style="background-color: gray; color: white; padding: 10px 20px;
+            <button style="background-color: orange; color: white; padding: 10px 20px;
                 border: none; cursor: pointer; margin-right: 10px; border-radius:5px; margin-top: 13px" type="submit" id="search">검색</button>
             <!-- 확인 버튼 -->
-            <a href="{% url 'records_create' %}?food_id={{ food.id }}&food_menu={{ food_name }}&food_name={{ food_type }}" class="btn" style="background-color: gray; color: white; padding: 10px 20px;
-                border: none; cursor: pointer; margin-right: 10px; margin-top: 13px">확인</a>
+            <a href="{% url 'records_create' %}?food_id={{ food.id }}&food_menu={{ food_name }}&food_name={{ food_type }}" class="btn" style="background-color:skyblue ; color: white; padding: 10px 20px;
+                border: none; cursor: pointer; margin-right: 10px; margin-top: 13px">기록</a>
         </form>
     </div>
 </div>
