--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -16,8 +16,8 @@
 <div style="text-align:center;">
     <div class="col-md-12 nanum-context">
         <form method="GET" action="{% url 'recommend_food' %}" onsubmit="getAddress()"
-              style="display: flex; justify-content: center; align-items: center; height:15vh; ">
-            <div class="form-group " style="margin-right: 10px;">
+              style="display: flex; justify-content: center; align-items: center; height:15vh;">
+            <div class="form-group " style="margin-right: 10px; text-align:center;">
                 <label for="foodTypeSelect">Select Food Type:</label>
                 <select id="foodTypeSelect" name="food_type" class="form-control so">
                     <option value="" {% if food_type == "" %}selected{% endif %}>All</option>
@@ -41,7 +41,7 @@
             border: none; cursor: pointer;">다시</a> -->
 
             <!-- 검색 버튼 -->
-            <button style="background-color: gray; color: white; padding: 10px 20px;
+            <button style="background-color: gray; color: white; padding: 9px 20px;
                 border: none; cursor: pointer; margin-right: 10px; border-radius:5px; margin-top: 13px" type="submit" id="search">검색</button>
             <!-- 확인 버튼 -->
             <a href="{% url 'records_create' %}?food_id={{ food.id }}&food_menu={{ food_name }}&food_name={{ food_type }}" class="btn" style="background-color: gray; color: white; padding: 10px 20px;
