--- a/templates/common/profile_update.html
+++ b/templates/common/profile_update.html
@@ -40,7 +40,7 @@
                 <input type="text" class="form-control" name="address" id="address"
                     value="{{ user.address|default_if_none:'' }}">
             </div>
-            <button type="submit" class="btn btn-secondary">수정하기</button>
+            <button type="submit" class="btn btn-danger">수정하기</button>
         </form>
 </div>
 
