가로 너비 변경

--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -3,7 +3,7 @@
 
 <div class="container my-3 nanum-context">
     <div class="row">
-        <div class="col-4">
+        <div class="col-sm-12 p-5">
             <h1><b>로그인(Log-In)</b></h1>
         </div>
 
