--- a/templates/pybo/records_list.html
+++ b/templates/pybo/records_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container my-3">
-    <div class="row justify-content-between my-3">
+    <div class="row justify-content-between my-3 col-sm-12 p-5">
         <div class="col-2 nanum-context">
             <select class="form-control so" id="sortOption">
                 <option value="recent" {% if so == 'recent' %}selected{% endif %}>
