--- a/templates/pybo/records_form.html
+++ b/templates/pybo/records_form.html
@@ -6,15 +6,15 @@
     <form method="post" class="post-form my-3" >
         {% csrf_token %}
         <div class="form-group nanum-context">
-            {% if form.food_name.value %}
-                <p>음식 분류 : {{ form.food_name.value }}</p>
+            {% if form.food_type.value %}
+                <p>음식 분류 : {{ form.food_type.value }}</p>
             {% else %}
-                <p>음식 분류 : {{ request.GET.food_name }}</p>
+                <p>음식 분류 : {{ request.GET.food_type }}</p>
             {% endif %}
-            {% if form.menu.value %}
-                <p>음식 메뉴 : {{ form.menu.value }}</p>
+            {% if form.name.value %}
+                <p>음식 메뉴 : {{ form.name.value }}</p>
             {% else %}
-                <p>음식 메뉴 : {{ request.GET.food_menu }}</p>
+                <p>음식 메뉴 : {{ request.GET.food_name }}</p>
             {% endif %}
         </div>
         <div class="form-group nanum-context">
