추천-기록 꼬인 데이터 풀기

--- a/templates/common/profile_records.html
+++ b/templates/common/profile_records.html
@@ -30,7 +30,7 @@
                 {% for records in records_list %}
                 <tr class="text-center nanum-context">
                     <td>{{ records_list.paginator.count|sub:records_list.start_index|sub:forloop.counter0|add:1 }}</td>
-                    <td>{{ records.menu }}</td>
+                    <td>{{ records.food_name }}</td>
                     <td>
                         <a href="{% url 're_detail' records.id %}" class="text-secondary">
                             {{ records.subject }}
