--- a/templates/pybo/records_list.html
+++ b/templates/pybo/records_list.html
@@ -95,13 +95,13 @@
         {% if page_number >= records_list.number|add:-2 and page_number <= records_list.number|add:5 %}
             {% if page_number == records_list.number %}
             <li class="page-item active" aria-current="page">
-                <a class="btn btn-info" href="#" data-page="{{ page_number }}">
+                <a class="page-link" href="#" data-page="{{ page_number }}">
                     {{ page_number }}
                 </a>
             </li>
             {% else %}
             <li class="page-item">
-                <a class="btn btn-info" href="#" data-page="{{ page_number }}">
+                <a class="page-link" href="#" data-page="{{ page_number }}">
                     {{ page_number }}
                 </a>
             </li>
